grammar/v4/ProverifParser.java
// Generated from Proverif.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProverifParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ZERO=1, POINT=2, COMMA=3, SEMICOLON=4, RIGHTPARENTHESIS=5, LEFTPARENTHESIS=6, 
		COLON=7, EQUAL=8, LEFTBRACKET=9, RIGHTBRACKET=10, IN=11, DIFF=12, OR=13, 
		AND=14, IMPLICATES=15, SLASH=16, EXCLAMATION=17, ARROW=18, REVERSEARROW=19, 
		REVERSEARROWR=20, ARROWR=21, DOUBLEARROW=22, EQUIVALENT=23, REVERSEIMPLICATES=24, 
		PIPE=25, PROCESS=26, CHANNEL=27, FREE=28, REDUC=29, FUN=30, CONST=31, 
		EQUATION=32, TABLE=33, PRED=34, LET=35, SET=36, EVENT=37, QUERY=38, NOT=39, 
		NOUNIF=40, FORALL=41, OTHERWISE=42, PUTBEGIN=43, INJEVENT=44, PHASE=45, 
		NEW=46, YIELD=47, DO=48, OUT=49, ELSE=50, SUCHTHAT=51, INSERT=52, IF=53, 
		THEN=54, GET=55, FAIL=56, ORWORD=57, FOREACH=58, CHOICE=59, TYPE=60, LETFUN=61, 
		OPTIONCHOICE=62, ID=63, INT=64, FLOAT=65, SINGLELINECOMMENT=66, MULTIPLELINESCOMMENT=67, 
		WS=68;
	public static final int
		RULE_programme = 0, RULE_declaration = 1, RULE_reduc = 2, RULE_reducprime = 3, 
		RULE_eqlist = 4, RULE_name = 5, RULE_value = 6, RULE_query = 7, RULE_gterm = 8, 
		RULE_gbinding = 9, RULE_nounifdecl = 10, RULE_gformat = 11, RULE_fbinding = 12, 
		RULE_clauses = 13, RULE_clause = 14, RULE_process = 15, RULE_pterm = 16, 
		RULE_ptermSequence = 17, RULE_term = 18, RULE_pattern = 19, RULE_patternSequence = 20, 
		RULE_mayfailterm = 21, RULE_typedecl = 22, RULE_failtypedecl = 23, RULE_proverifOptions = 24, 
		RULE_ident = 25, RULE_id = 26, RULE_integer = 27, RULE_typeid = 28;
	public static final String[] ruleNames = {
		"programme", "declaration", "reduc", "reducprime", "eqlist", "name", "value", 
		"query", "gterm", "gbinding", "nounifdecl", "gformat", "fbinding", "clauses", 
		"clause", "process", "pterm", "ptermSequence", "term", "pattern", "patternSequence", 
		"mayfailterm", "typedecl", "failtypedecl", "proverifOptions", "ident", 
		"id", "integer", "typeid"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'0'", "'.'", "','", "';'", "')'", "'('", "':'", "'='", "'['", "']'", 
		"'in'", "'<>'", "'||'", "'&&'", "'==>'", "'/'", "'!'", "'->'", "'<-'", 
		"'<-R'", "'->R'", "'<->'", "'<=>'", "'<='", "'|'", "'process'", "'channel'", 
		"'free'", "'reduc'", "'fun'", "'const'", "'equation'", "'table'", "'pred'", 
		"'let'", "'set'", "'event'", "'query'", "'not'", "'nounif'", "'forall'", 
		"'otherwise'", "'putbegin'", "'inj-event'", "'phase'", "'new'", "'yield'", 
		"'do'", "'out'", "'else'", "'suchthat'", "'insert'", "'if'", "'then'", 
		"'get'", "'fail'", "'or'", "'foreach'", "'choice'", "'type'", "'letfun'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ZERO", "POINT", "COMMA", "SEMICOLON", "RIGHTPARENTHESIS", "LEFTPARENTHESIS", 
		"COLON", "EQUAL", "LEFTBRACKET", "RIGHTBRACKET", "IN", "DIFF", "OR", "AND", 
		"IMPLICATES", "SLASH", "EXCLAMATION", "ARROW", "REVERSEARROW", "REVERSEARROWR", 
		"ARROWR", "DOUBLEARROW", "EQUIVALENT", "REVERSEIMPLICATES", "PIPE", "PROCESS", 
		"CHANNEL", "FREE", "REDUC", "FUN", "CONST", "EQUATION", "TABLE", "PRED", 
		"LET", "SET", "EVENT", "QUERY", "NOT", "NOUNIF", "FORALL", "OTHERWISE", 
		"PUTBEGIN", "INJEVENT", "PHASE", "NEW", "YIELD", "DO", "OUT", "ELSE", 
		"SUCHTHAT", "INSERT", "IF", "THEN", "GET", "FAIL", "ORWORD", "FOREACH", 
		"CHOICE", "TYPE", "LETFUN", "OPTIONCHOICE", "ID", "INT", "FLOAT", "SINGLELINECOMMENT", 
		"MULTIPLELINESCOMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Proverif.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProverifParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgrammeContext extends ParserRuleContext {
		public TerminalNode PROCESS() { return getToken(ProverifParser.PROCESS, 0); }
		public ProcessContext process() {
			return getRuleContext(ProcessContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgrammeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProverifListener ) ((ProverifListener)listener).enterProgramme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProverifListener ) ((ProverifListener)listener).exitProgramme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProverifVisitor ) return ((ProverifVisitor<? extends T>)visitor).visitProgramme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammeContext programme() throws RecognitionException {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHANNEL) | (1L << FREE) | (1L << REDUC) | (1L << FUN) | (1L << CONST) | (1L << EQUATION) | (1L << TABLE) | (1L << PRED) | (1L << LET) | (1L << SET) | (1L << EVENT) | (1L << QUERY) | (1L << NOT) | (1L << NOUNIF) | (1L << TYPE) | (1L << LETFUN))) != 0)) {
				{
				{
				setState(58);
				declaration();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(PROCESS);
			setState(65);
			process();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ProverifParser.TYPE, 0); }
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public ProverifOptionsContext proverifOptions() {
			return getRuleContext(ProverifOptionsContext.class,0);
		}
		public TerminalNode POINT() { return getToken(ProverifParser.POINT, 0); }
		public TerminalNode CHANNEL() { return getToken(ProverifParser.CHANNEL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ProverifParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ProverifParser.COMMA, i);
		}
		public TerminalNode FREE() { return getToken(ProverifParser.FREE, 0); }
		public TerminalNode COLON() { return getToken(ProverifParser.COLON, 0); }
		public List<TypeidContext> typeid() {
			return getRuleContexts(TypeidContext.class);
		}
		public TypeidContext typeid(int i) {
			return getRuleContext(TypeidContext.class,i);
		}
		public TerminalNode CONST() { return getToken(ProverifParser.CONST, 0); }
		public TerminalNode FUN() { return getToken(ProverifParser.FUN, 0); }
		public TerminalNode LEFTPARENTHESIS() { return getToken(ProverifParser.LEFTPARENTHESIS, 0); }
		public TerminalNode RIGHTPARENTHESIS() { return getToken(ProverifParser.RIGHTPARENTHESIS, 0); }
		public TerminalNode LETFUN() { return getToken(ProverifParser.LETFUN, 0); }
		public TerminalNode EQUAL() { return getToken(ProverifParser.EQUAL, 0); }
		public PtermContext pterm() {
			return getRuleContext(PtermContext.class,0);
		}
		public TypedeclContext typedecl() {
			return getRuleContext(TypedeclContext.class,0);
		}
		public TerminalNode REDUC() { return getToken(ProverifParser.REDUC, 0); }
		public ReducContext reduc() {
			return getRuleContext(ReducContext.class,0);
		}
		public ReducprimeContext reducprime() {
			return getRuleContext(ReducprimeContext.class,0);
		}
		public TerminalNode EQUATION() { return getToken(ProverifParser.EQUATION, 0); }
		public EqlistContext eqlist() {
			return getRuleContext(EqlistContext.class,0);
		}
		public TerminalNode PRED() { return getToken(ProverifParser.PRED, 0); }
		public TerminalNode TABLE() { return getToken(ProverifParser.TABLE, 0); }
		public TerminalNode LET() { return getToken(ProverifParser.LET, 0); }
		public ProcessContext process() {
			return getRuleContext(ProcessContext.class,0);
		}
		public TerminalNode SET() { return getToken(ProverifParser.SET, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode EVENT() { return getToken(ProverifParser.EVENT, 0); }
		public TerminalNode QUERY() { return getToken(ProverifParser.QUERY, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ProverifParser.SEMICOLON, 0); }
		public TerminalNode NOT() { return getToken(ProverifParser.NOT, 0); }
		public GtermContext gterm() {
			return getRuleContext(GtermContext.class,0);
		}
		public TerminalNode NOUNIF() { return getToken(ProverifParser.NOUNIF, 0); }
		public NounifdeclContext nounifdecl() {
			return getRuleContext(NounifdeclContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProverifListener ) ((ProverifListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProverifListener ) ((ProverifListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProverifVisitor ) return ((ProverifVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			int _alt;
			setState(281);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				match(TYPE);
				setState(68);
				ident();
				setState(69);
				proverifOptions();
				setState(70);
				match(POINT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(CHANNEL);
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(73);
						ident();
						setState(74);
						match(COMMA);
						}
						} 
					}
					setState(80);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				setState(81);
				ident();
				setState(82);
				match(POINT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				match(FREE);
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(85);
						ident();
						setState(86);
						match(COMMA);
						}
						} 
					}
					setState(92);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(93);
				ident();
				setState(94);
				match(COLON);
				setState(95);
				typeid();
				setState(96);
				proverifOptions();
				setState(97);
				match(POINT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				match(CONST);
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(100);
						ident();
						setState(101);
						match(COMMA);
						}
						} 
					}
					setState(107);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(108);
				ident();
				setState(109);
				match(COLON);
				setState(110);
				typeid();
				setState(111);
				proverifOptions();
				setState(112);
				match(POINT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				match(FUN);
				setState(115);
				ident();
				setState(116);
				match(LEFTPARENTHESIS);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CHANNEL || _la==ID) {
					{
					setState(122);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(117);
							typeid();
							setState(118);
							match(COMMA);
							}
							} 
						}
						setState(124);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					}
					setState(125);
					typeid();
					}
				}

				setState(128);
				match(RIGHTPARENTHESIS);
				setState(129);
				match(COLON);
				setState(130);
				typeid();
				setState(131);
				proverifOptions();
				setState(132);
				match(POINT);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(134);
				match(LETFUN);
				setState(135);
				ident();
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFTPARENTHESIS) {
					{
					setState(136);
					match(LEFTPARENTHESIS);
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(137);
						typedecl();
						}
					}

					setState(140);
					match(RIGHTPARENTHESIS);
					}
				}

				setState(143);
				match(EQUAL);
				setState(144);
				pterm();
				setState(145);
				match(POINT);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(147);
				match(REDUC);
				setState(148);
				reduc();
				setState(149);
				proverifOptions();
				setState(150);
				match(POINT);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(152);
				match(FUN);
				setState(153);
				ident();
				setState(154);
				match(LEFTPARENTHESIS);
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CHANNEL || _la==ID) {
					{
					setState(160);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(155);
							typeid();
							setState(156);
							match(COMMA);
							}
							} 
						}
						setState(162);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					}
					setState(163);
					typeid();
					}
				}

				setState(166);
				match(RIGHTPARENTHESIS);
				setState(167);
				match(COLON);
				setState(168);
				typeid();
				setState(169);
				match(REDUC);
				setState(170);
				reducprime();
				setState(171);
				proverifOptions();
				setState(172);
				match(POINT);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(174);
				match(EQUATION);
				setState(175);
				eqlist();
				setState(176);
				proverifOptions();
				setState(177);
				match(POINT);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(179);
				match(PRED);
				setState(180);
				ident();
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFTPARENTHESIS) {
					{
					setState(181);
					match(LEFTPARENTHESIS);
					setState(191);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==CHANNEL || _la==ID) {
						{
						setState(187);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(182);
								typeid();
								setState(183);
								match(COMMA);
								}
								} 
							}
							setState(189);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
						}
						setState(190);
						typeid();
						}
					}

					setState(193);
					match(RIGHTPARENTHESIS);
					}
				}

				setState(196);
				proverifOptions();
				setState(197);
				match(POINT);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(199);
				match(TABLE);
				setState(200);
				ident();
				setState(201);
				match(LEFTPARENTHESIS);
				setState(211);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CHANNEL || _la==ID) {
					{
					setState(207);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(202);
							typeid();
							setState(203);
							match(COMMA);
							}
							} 
						}
						setState(209);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
					}
					setState(210);
					typeid();
					}
				}

				setState(213);
				match(RIGHTPARENTHESIS);
				setState(214);
				match(POINT);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(216);
				match(LET);
				setState(217);
				ident();
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFTPARENTHESIS) {
					{
					setState(218);
					match(LEFTPARENTHESIS);
					setState(220);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(219);
						typedecl();
						}
					}

					setState(222);
					match(RIGHTPARENTHESIS);
					}
				}
